2014-01-03  Marek Polacek  <polacek@redhat.com>

	PR other/59661
	* doc/extend.texi: Fix the return value of __builtin_FUNCTION and
	__builtin_FILE.

2014-01-03  Jakub Jelinek  <jakub@redhat.com>

	PR target/59625
	* config/i386/i386.c (ix86_avoid_jump_mispredicts): Don't consider
	asm goto as jump.

	* config/i386/i386.md (MODE_SIZE): New mode attribute.
	(push splitter): Use <P:MODE_SIZE> instead of
	GET_MODE_SIZE (<P:MODE>mode).
	(lea splitter): Use <MODE_SIZE> instead of GET_MODE_SIZE (<MODE>mode).
	(mov -1, reg peephole2): Likewise.
	* config/i386/sse.md (*mov<mode>_internal,
	<sse>_storeu<ssemodesuffix><avxsizesuffix>,
	<sse2_avx_avx512f>_storedqu<mode>, <sse>_andnot<mode>3,
	*<code><mode>3, *andnot<mode>3<mask_name>,
	<mask_codefor><code><mode>3<mask_name>): Likewise.
	* config/i386/subst.md (mask_mode512bit_condition,
	sd_mask_mode512bit_condition): Likewise.

2014-01-02  Xinliang David Li  <davidxl@google.com>

	PR tree-optimization/59303
	* tree-ssa-uninit.c (is_use_properly_guarded): Main cleanup.
	(dump_predicates): Better output format.
	(pred_equal_p): New function.
	(is_neq_relop_p): Ditto.
	(is_neq_zero_form_p): Ditto.
	(pred_expr_equal_p): Ditto.
	(pred_neg_p): Ditto.
	(simplify_pred): Ditto.
	(simplify_preds_2): Ditto.
	(simplify_preds_3): Ditto.
	(simplify_preds_4): Ditto.
	(simplify_preds): Ditto.
	(push_pred): Ditto.
	(push_to_worklist): Ditto.
	(get_pred_info_from_cmp): Ditto.
	(is_degenerated_phi): Ditto.
	(normalize_one_pred_1): Ditto.
	(normalize_one_pred): Ditto.
	(normalize_one_pred_chain): Ditto.
	(normalize_preds): Ditto.
	(normalize_cond_1): Remove function.
	(normalize_cond): Ditto.
	(is_gcond_subset_of): Ditto.
	(is_subset_of_any): Ditto.
	(is_or_set_subset_of): Ditto.
	(is_and_set_subset_of): Ditto.
	(is_norm_cond_subset_of): Ditto.
	(pred_chain_length_cmp): Ditto.
	(convert_control_dep_chain_into_preds): Type change.
	(find_predicates): Ditto.
	(find_def_preds): Ditto.
	(destroy_predicates_vecs): Ditto.